--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.4.0"
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -62,4 +63,12 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.12.0"
     implementation "com.github.bumptech.glide:okhttp3-integration:4.12.0@aar"
 
+    // dagger
+    kapt "com.google.dagger:dagger-compiler:2.40.2"
+    implementation "com.google.dagger:dagger:2.40.2"
+
+    // dagger android
+    kapt "com.google.dagger:dagger-android-processor:2.40.2"
+    implementation "com.google.dagger:dagger-android:2.40.2"
+    implementation "com.google.dagger:dagger-android-support:2.40.2"
 }
