--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         jvmTarget = '1.8'
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 }
@@ -62,4 +62,8 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.12.0"
     implementation "com.github.bumptech.glide:okhttp3-integration:4.12.0@aar"
 
+    //Koin
+    implementation "io.insert-koin:koin-core:3.1.2"
+    implementation "io.insert-koin:koin-android:3.1.2"
+    implementation "io.insert-koin:koin-android-compat:3.1.2"
 }
