--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk Config.compile_sdk
 
     defaultConfig {
-        applicationId "com.artushock.artushockenglishdictionary"
-        minSdk 23
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        applicationId Config.application_id
+        minSdk Config.min_sdk
+        targetSdk Config.target_sdk
+        versionCode Releases.version_code
+        versionName Releases.version_name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -25,8 +25,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility Config.java_version
+        targetCompatibility Config.java_version
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -38,42 +38,50 @@ android {
 }
 
 dependencies {
+    implementation project(Modules.repository)
+    implementation project(Modules.models)
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation "androidx.fragment:fragment-ktx:1.4.1"
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //Design
+    implementation Design.appcompat
+    implementation Design.fragmentKtx
+    implementation Design.material
+    implementation Design.constraintLayout
+
+    //Kotlin
+    implementation Kotlin.coreKtx
+
+    //Test
+    testImplementation TestImpl.jUnit
+    androidTestImplementation TestImpl.jUnitExt
+    androidTestImplementation TestImpl.espressoCore
 
     // Rx-Java
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation RxJava.rxAndroid
+    implementation RxJava.rxJava
+
     // Retrofit 2
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation Retrofit.retrofit
+    implementation Retrofit.retrofitGson
+    implementation Retrofit.loggingInterceptor
+    implementation Retrofit.rxjava2Adapter
+    implementation Retrofit.retrofit2KotlinCoroutinesAdapter
 
     //Glide
-    kapt "com.github.bumptech.glide:compiler:4.12.0"
-    implementation "com.github.bumptech.glide:glide:4.12.0"
-    implementation "com.github.bumptech.glide:okhttp3-integration:4.12.0@aar"
+    kapt Glide.glideCompiler
+    implementation Glide.glide
+    implementation Glide.glideOkhttp3
 
     //Koin
-    implementation "io.insert-koin:koin-core:3.1.2"
-    implementation "io.insert-koin:koin-android:3.1.2"
-    implementation "io.insert-koin:koin-android-compat:3.1.2"
+    implementation Koin.koinCore
+    implementation Koin.koinAndroid
+    implementation Koin.koinAndroidCompat
 
     //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation Coroutines.coroutinesCore
+    implementation Coroutines.coroutinesAndroid
 
     //Room
-    implementation 'androidx.room:room-runtime:2.4.1'
-    kapt 'androidx.room:room-compiler:2.4.1'
-    implementation 'androidx.room:room-ktx:2.4.1'
+    implementation Room.roomRuntime
+    kapt Room.roomCompiler
+    implementation Room.roomKtx
 }
